AMDP-269 Fix single use case display on smaller screens.

--- a/web/themes/custom/emoney_apigee_kickstart/sass/pages/_use_case.scss
+++ b/web/themes/custom/emoney_apigee_kickstart/sass/pages/_use_case.scss
@@ -65,6 +65,10 @@ $delete-bg: #a83e24;
     }
 
     .use-case-content {
+      @media (max-width: 992px) {
+        margin-bottom: 150px;
+      }
+
       .text-image__field-image {
         width: 460px;
         height: 290px;
@@ -76,6 +80,10 @@ $delete-bg: #a83e24;
 
         @media only screen and (min-width: 1200px) {
           margin-left: 100px;
+        }
+        
+        @media (max-width: 992px) {
+          padding-left: 50px;
         }
       }
     }
